Fri Aug 16 18:21:32 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ include/Makefile.am:
	- add tdsiconv.h to distribution
	+ include/tds.h.in include/tdsutil.h src/tds/write.c:
	- changed buffer param for tds_put_XXX to const
	+ src/tds/write.c:
	- applied small optimization to tds_put_buf
	- removed nested comment
	+ src/ctlib/Makefile.am src/odbc/Makefile.am:
	- add challenge.lo to link
	+ src/tds/Makefile.am:
	- add tds_willconvert.h to distribution
	- moved link to iconv to LDLIBRARIES directive

Fri Aug 16 14:22:19 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/login.c:
	- send username/password if not domain
	- do not send dummy authentication structure
	- return correct result from tds7_send_login

Fri Aug 16 12:43:09 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c: rewritten string_to_numeric:
	- improved performance
	- do not allocated unneeded and unchecked buffers
	- work with not terminated string
	- remove buffer overflow if number too long
	- check for numeric overflow
	+ src/tds/unittests/t0008.c: (new)
	- test numeric results

Fri Aug 16 10:26:12 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c:
	- rewritten tds_atoi (to string_to_int), because atoi
	return 0 on bad string (such as "foo"), also work on
	unterminated string and do test on number overflow
	- check for overflow converting between int types
	- add test check to test conversion from char to int

Fri Aug 16 08:05:42 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c: converting from bit:
	- return correct values
	- added terminator to returned string
	- return TDS_FAIL if failure

Fri Aug 16 07:51:38 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	+ src/tds/convert.c:
	- add VARCHAR to convert table
	- removed some unused variable and declaration
	- return correct value converting from binary to char
	- do not treat NVARCHAR like VARCHAR
	- added some memory allocation tests
